--- a/templates/components/custom/header/header-layout-2.html
+++ b/templates/components/custom/header/header-layout-2.html
@@ -60,8 +60,8 @@
                 </a>
             </div>
 
-            <div class="items item--search">
-                <a class="navUser-action headerSearch__button hide-on-tablet"
+            <div class="items item--search hide-on-tablet">
+                <a class="navUser-action headerSearch__button"
                     href="#"
                     aria-label="Icon Search Header">
                     <span class="navUser-icon navUser-item-searchIcon">
