--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -31,7 +31,26 @@ product:
                 {{> components/products/reviews reviews=product.reviews product=product urls=urls}}
             {{/all}}
 
-            {{> components/products/tabs}}
+            <div class="productView__tabs">
+                {{> components/products/tabs}}
+            </div>
+        </div>
+
+        <div class="cartBar" id="cartBar">
+            <div class="container h-full">
+                <div class="cartBar__wrapper flex flex-center-x flex-between h-full">
+                    <div class="cartBar__info">
+                        <h4 class="productTitle m-0">{{product.title}}</h4>
+                    </div>
+                    <div class="cartBar__form">
+                        <button class="button button--secondary mb-0">
+                            Configure
+
+                            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-nav-arrow-up" viewBox="0 0 24 24"><path d="m6 15 6-6 6 6" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
