Done Sticky Add To Cart

--- a/assets/scss/custom/_animate.scss
+++ b/assets/scss/custom/_animate.scss
@@ -206,3 +206,12 @@
         animation-name: itemFadeInRight;
     }
 }
+
+@keyframes animate-svg {
+    0% {
+        stroke-dashoffset: 88;
+    }
+    100% {
+        stroke-dashoffset: 0;
+    }
+}
