--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -611,3 +611,96 @@
         }
     }
 }
+
+// * ------ Add To cart Animation ------
+.productSubmit__add {
+    span {
+        position: relative;
+        vertical-align: middle;
+        transition: opacity .3s;
+    }
+
+    .btn__text {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        transform: translateZ(0);
+    }
+
+    .btn__added, .btn__loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        opacity: 0;
+    }
+
+    .btn__added {
+        width: 14px;
+        height: 8px;
+        border-left: 1px solid #cba052;
+        border-bottom: 1px solid #cba052;
+        margin-top: -2px;
+        transform: translate(-50%, -50%) rotate(-45deg);
+    }
+
+    .svg-loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 18px;
+        height: 18px;
+        transform: translate(-50%, -50%);
+        transition: opacity .3s;
+
+        circle {
+            stroke-width: 1;
+            stroke: rgba(203, 160, 82, 0.05);
+            fill: none;
+
+            ~ circle {
+                stroke: #cba052;
+                stroke-dashoffset: 88;
+                animation: animate-svg 1s linear infinite;
+                animation-play-state: paused;
+            }
+        }
+    }
+
+    // * ------ Stage: Loading ------
+    .atc-is-loading & {
+        background-color: transparent;
+
+        .btn__text {
+            opacity: 0;
+        }
+
+        .btn__loader {
+            top: 50%;
+            left: 50%;
+            position: absolute;
+            opacity: 1;
+        }
+
+        .svg-loader {
+            circle ~ circle {
+                animation-play-state: running;
+            }
+        }
+    }
+
+    // * ------ Stage: Added ------
+    .atc-is-added & {
+        background-color: transparent;
+
+        .btn__text {
+            opacity: 0;
+        }
+
+        .btn__added {
+            top: 50%;
+            left: 50%;
+            position: absolute;
+            opacity: 1;
+        }
+    }
+}
