--- a/assets/scss/custom/_function.scss
+++ b/assets/scss/custom/_function.scss
@@ -510,4 +510,18 @@
         transform: translateY(calc(var(--cookie-bar-height)* -1));
         transition: opacity .5s ease, transform .5s ease, visibility 0s linear 0s;
     }
+
+    .productSubmit__add {
+        position: relative;
+        overflow: hidden;
+        min-height: 50px;
+        height: 50px;
+        min-width: 260px;
+        padding-left: 35px;
+        padding-right: 35px;
+        margin: 0;
+        line-height: 0;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 }
