--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -269,25 +269,44 @@
 // -----------------------------------------------------------------------------
 
 .form-increment {
+    position: relative;
     .button {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding-left: 15px;
         margin: 0;
-        padding: remCalc(3px) remCalc(5px);
+
+        &[data-action="dec"] {
+            left: 0;
+        }
+
+        &[data-action="inc"] {
+            right: 0;
+        }
     }
 }
 
 .form-input--incrementTotal {
-    border: 0;
-    display: inline-block;
-    font-size: fontSize("smaller");
-    font-weight: fontWeight("bold");
-    height: auto;
-    padding: 0;
+    padding: 10px 30px;
     text-align: center;
-    vertical-align: middle;
-    width: remCalc(35px);
+    -webkit-appearance: none;
+    border-radius: 22px;
+    border-color: #cba052;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 18px;
+    padding-inline-end: 30px;
+    padding-inline-start: 30px;
+    height: auto;
 
     .form-field--success & {
         float: none;
+        border-color: #cba052;
     }
 }
 
