--- a/assets/scss/components/stencil/navUser/_navUser.scss
+++ b/assets/scss/components/stencil/navUser/_navUser.scss
@@ -322,13 +322,13 @@
     border-radius: 50%;
     color: color("whites", "bright");
     display: none;
-    font-size: fontSize("tiny");
-    font-weight: fontWeight("bold");
-    height: 20px; // 1
-    line-height: 20px; // 1
+    font-size: 10px;
+    font-weight: 300;
+    min-height: 17px; // 1
+    line-height: 17px; // 1
     margin-left: spacing("eighth");
     text-align: center;
-    width: 20px; // 1
+    min-width: 17px; // 1
 }
 
 .countPill--positive {
