--- a/templates/components/products/add-to-cart.html
+++ b/templates/components/products/add-to-cart.html
@@ -16,7 +16,7 @@
                                 <span class="is-srOnly">{{lang 'products.quantity_decrease' name=product.title}}</span>
                                 <i class="icon" aria-hidden="true">
                                     <svg>
-                                        <use href="#icon-keyboard-arrow-down"/>
+                                        <use href="#icon-minus"/>
                                     </svg>
                                 </i>
                             </button>
@@ -34,7 +34,7 @@
                                 <span class="is-srOnly">{{lang 'products.quantity_increase' name=product.title}}</span>
                                 <i class="icon" aria-hidden="true">
                                     <svg>
-                                        <use href="#icon-keyboard-arrow-up"/>
+                                        <use href="#icon-plus"/>
                                     </svg>
                                 </i>
                             </button>
