--- a/assets/scss/components/stencil/previewCart/_previewCart.scss
+++ b/assets/scss/components/stencil/previewCart/_previewCart.scss
@@ -153,10 +153,10 @@
         margin: 0;
         letter-spacing: 0;
         border: 0;
-        border-bottom: 1px solid #e2e2e7;
+        border-bottom: 1px solid rgb(244, 242, 240);
 
         &:first-child {
-            border-top: 1px solid #e2e2e7;
+            border-top: 1px solid rgb(244, 242, 240);
         }
     }
 
@@ -1296,7 +1296,9 @@
         padding: 15px;
         height: 100%;
         max-height: calc(100% - 47px);
-        @include flexbox($flex-direction: column, $justify-content: center);
+        &.previewCartWrapper--empty {
+            @include flexbox($flex-direction: column, $justify-content: center);
+        }
         
         .previewCart {
             height: auto;
