--- a/assets/scss/components/stencil/cart/_cart.scss
+++ b/assets/scss/components/stencil/cart/_cart.scss
@@ -680,3 +680,125 @@ $card-preview-zoom-bottom-offset:       6rem;
     padding-bottom: spacing("single");
     padding-right: spacing("single");
 }
+
+
+// * ------ Cart Policy Checkbox ------
+.cartPolicy {
+    --rale-border: #c4cdd5;
+    --rale-color: #ffffff;
+    --rale-size: 20px;
+    --rale-background: #cba052;
+
+    margin-bottom: 12px;
+
+    .policy {
+        &__container {
+            display: inline-flex;
+            align-items: flex-start;
+            flex-wrap: nowrap;
+            position: relative;
+        }
+
+        &__checkbox {
+            margin-right: 7px;
+            display: inline-block;
+            position: relative;
+
+            input[type=checkbox] {
+                border-radius: 50%;
+                visibility: visible;
+                cursor: pointer;
+                display: block;
+                outline: 0;
+                border: none;
+                margin: 0;
+                padding: 0;
+                min-height: auto;
+                min-width: auto;
+                opacity: 0;
+                width: var(--rale-size);
+                height: var(--rale-size);
+                appearance: checkbox;
+                vertical-align: bottom;
+
+                &:hover {
+                    & + .policy__box {
+                        &::after {
+                            box-shadow: inset 0 0 0 2px var(--rale-border);
+                        }
+                    }
+                
+                }
+
+                &:checked + .policy__box {
+                    &::after {
+                        box-shadow: inset 0 0 0 2px var(--rale-background);
+                        transition-delay: .4s;
+                    }
+
+                    .rale-icon {
+                        stroke-dashoffset: 162.6;
+                        stroke-dasharray: 0 162.6 28 134.6;
+                        stroke: var(--rale-background);
+                    }
+                }
+            }
+
+            .policy__box {
+                @include flexcb($cb: center);
+                @include pos($pos: abs, $t:0, $l: 0);
+                width: 100%;
+                height: 100%;
+                pointer-events: none;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    z-index: 1;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    transition: box-shadow .3s;
+                    box-shadow: inset 0 0 0 1px var(--rale-border);
+                    border-radius: 50%;
+                }
+
+                .rale-icon {
+                    display: block;
+                    fill: none;
+                    stroke-linecap: round;
+                    stroke-linejoin: round;
+                    width: 100%;
+                    height: 100%;
+                    position: relative;
+                    z-index: 2;
+                    stroke-width: 3.6px;
+                    stroke-dashoffset: 124.6;
+                    stroke-dasharray: 0 162.6 133 29.6;
+                    transition: stroke-dasharray .6s, stroke-dashoffset .6s;
+                    stroke: transparent;
+                }
+            }
+        }
+
+        &__text {
+            display: block;
+            text-align: start;
+            float: none;
+            font-weight: 400;
+            line-height: normal;
+            text-transform: none;
+            letter-spacing: normal;
+            margin: 0;
+            padding: 0;
+            font-family:inherit;
+            font-size:14px;
+            color: #212b36;
+
+            a {
+                color: #cba052;
+            }
+        }
+    }
+}
