--- a/assets/scss/custom/_common.scss
+++ b/assets/scss/custom/_common.scss
@@ -670,8 +670,15 @@
     .atc-is-loading & {
         background-color: transparent;
 
+        &:hover {
+            background-color: transparent;
+        }
+        &::after {
+            content: unset;
+        }
+
         .btn__text {
-            opacity: 0;
+            opacity: 0; 
         }
 
         .btn__loader {
@@ -691,6 +698,13 @@
     // * ------ Stage: Added ------
     .atc-is-added & {
         background-color: transparent;
+
+        &:hover {
+            background-color: transparent;
+        }
+        &::after {
+            content: unset;
+        }
 
         .btn__text {
             opacity: 0;
