--- a/templates/components/common/quick-search.html
+++ b/templates/components/common/quick-search.html
@@ -23,7 +23,11 @@
         </fieldset>
 
         <div class="search-popdown__close">
-            <button type="button" class="search-popdown__close__button" title="Close" data-popdown-close=""><svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-cancel" viewBox="0 0 24 24"><path d="M6.758 17.243 12.001 12m5.243-5.243L12 12m0 0L6.758 6.757M12.001 12l5.243 5.243" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg></button>
+            <button type="button" class="search-popdown__close__button" title="Close" data-popdown-close="">
+                <span class="icon icon--cancel">
+                    <svg><use xlink:href="#icon-cancel"></use></svg>
+                </span>
+            </button>
         </div>
     </form>
     <section class="quickSearchResults customQuickSearchResults" data-bind="html: results"></section>
